finalize README, and UI/test updates

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb://root:password@localhost:27017
+MONGODB_URL=mongodb://root:password@localhost:27017/morphia_db?authSource=admin
 MONGODB_DATABASE=morphia_db
 NODE_ENV=development
 GOOGLE_API_KEY=your-api-key-here
